# LuaJIT

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
etc/: luajit.1
src/: CMakeLists.txt  luaconf.h  luajit_rolling.h  msvcbuild.bat  version.rc
src/host/: CMakeLists.txt
